@@ -11,7 +11,7 @@ public class JDBCConnectionPool extends ObjectPool<Connection> {
     public JDBCConnectionPool(String driver, String dsn, String usr, String pwd) {
         super();
         try {
-            Class.forName(driver).newInstance();
+            Class.forName(driver).getDeclaredConstructor().newInstance();
         } catch (Exception e) {
             e.printStackTrace();
         }
@@ -25,13 +25,13 @@ public class JDBCConnectionPool extends ObjectPool<Connection> {
             return (DriverManager.getConnection(dsn, usr, pwd));
         } catch (SQLException e) {
             e.printStackTrace();
-            return (null);
+            return null;
         }
     }
 
     void dead(Connection o) {
         try {
-            ((Connection) o).close();
+            o.close();
         } catch (SQLException e) {
             e.printStackTrace();
         }
@@ -39,10 +39,10 @@ public class JDBCConnectionPool extends ObjectPool<Connection> {
 
     boolean validate(Connection o) {
         try {
-            return (!((Connection) o).isClosed());
+            return !o.isClosed();
         } catch (SQLException e) {
             e.printStackTrace();
-            return (false);
+            return false;
         }
     }
 
